--- a/homework/practice_II.ipynb
+++ b/homework/practice_II.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "139"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,21 +452,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0   -0.055717\n",
-       "1    0.082618\n",
-       "2    0.347607\n",
-       "3    0.547646\n",
-       "4    0.757572\n",
+       "ticker\n",
+       "91282CFZ Govt   -0.055717\n",
+       "91282CGC Govt    0.082618\n",
+       "91282CGH Govt    0.347607\n",
+       "91282CGP Govt    0.547646\n",
+       "91282CGT Govt    0.757572\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,11 +480,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
     "Future_0 = futures_price(110,repo=repo,cpn = cpn,curr_date=\"2015-07-30\",cpn_date0=\"2015-02-04\",cpn_date1=\"2015-08-04\",conversion=1.5,delivery_date=\"2015-09-30\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "73.34202480632563"
+      ]
+     },
+     "execution_count": 309,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Future_0"
    ]
   },
   {
